src/objects/JiraSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <description>standard JIRA issue type values range from &apos;1&apos; to &apos;4&apos; . &apos;1&apos; is for Bug and so on</description>
        <label>Issue Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_URL__c</fullName>
        <label>JIRA URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Key__c</fullName>
        <description>Jira Project Key Under which JIRA Project you want to create the issue.</description>
        <label>Project Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Id__c</fullName>
        <description>Your system Id in Connection. You should check this in JIRA under Connections</description>
        <label>System Id</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <description>User Name in the Jira instance</description>
        <label>UserName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Jira Settings</label>
</CustomObject>